data_services divided to data_service.py and ext_api.py
